force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EYI_Remarks__c</fullName>
    <label>Remarks</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>