force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>EYI_Residential_Address__c</fullName>
    <label>Residential Address</label>
    <type>Address</type>
</CustomField>