force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Secondary_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Secondary_Mobile_Number__c</fullName>
    <label>Secondary Mobile Number</label>
    <type>Phone</type>
</CustomField>