force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Segment__c.field-meta.xml
<CustomField>
    <fullName>EYI_Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pune</fullName>
                <default>true</default>
                <label>Pune</label>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Rest of Maharashtra</fullName>
            </value>
            <value>
                <fullName>Rest of India</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>