force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Served_in_Indian_Defence__c.field-meta.xml
<CustomField>
    <fullName>EYI_Served_in_Indian_Defence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Served in Indian Defence</label>
    <type>Checkbox</type>
</CustomField>