force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Sourcing_Manager__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sourcing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sourcing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CIF_Form</relationshipName>
    <type>Lookup</type>
</CustomField>