force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_SubProject_Enquired__c.field-meta.xml
<CustomField>
    <fullName>EYI_SubProject_Enquired__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubProject Enquired</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR ((5 AND 6) AND 7)</booleanFilter>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>contains</operation>
            <value>Commercial</value>
        </filterItems>
        <filterItems>
            <field>EYI_SubProject__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Commercial</value>
        </filterItems>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>contains</operation>
            <value>Residential</value>
        </filterItems>
        <filterItems>
            <field>EYI_SubProject__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Residential</value>
        </filterItems>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>notContain</operation>
            <value>Residential</value>
        </filterItems>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>notContain</operation>
            <value>Commercial</value>
        </filterItems>
        <filterItems>
            <field>EYI_SubProject__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Commercial, Residential</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EYI_SubProject__c</referenceTo>
    <relationshipLabel>Customer Information Form</relationshipLabel>
    <relationshipName>Customer_Information_Form</relationshipName>
    <type>Lookup</type>
</CustomField>