force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Suburb__c.field-meta.xml
<CustomField>
    <fullName>EYI_Suburb__c</fullName>
    <label>Suburb</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kharadi</fullName>
            </value>
            <value>
                <fullName>Magarpatta</fullName>
            </value>
            <value>
                <fullName>Worli</fullName>
            </value>
            <value>
                <fullName>Bandra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>