force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Typology_Interested__c.field-meta.xml
<CustomField>
    <fullName>EYI_Typology_Interested__c</fullName>
    <label>Typology Interested</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Property__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.5BHK</fullName>
            </value>
            <value>
                <fullName>2BHK</fullName>
            </value>
            <value>
                <fullName>2.5BHK</fullName>
            </value>
            <value>
                <fullName>3BHK</fullName>
            </value>
            <value>
                <fullName>3.5 BHK</fullName>
            </value>
            <value>
                <fullName>4BHK</fullName>
            </value>
            <value>
                <fullName>4.5BHK</fullName>
            </value>
            <value>
                <fullName>5 BHK</fullName>
            </value>
            <value>
                <fullName>Shops</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Duplex</fullName>
            </value>
            <value>
                <fullName>Penthouse</fullName>
            </value>
            <value>
                <fullName>Podium Villas</fullName>
            </value>
            <value>
                <fullName>Villa V2</fullName>
            </value>
            <value>
                <fullName>Villa V3</fullName>
            </value>
            <value>
                <fullName>Villa V1</fullName>
            </value>
            <value>
                <fullName>Office Space</fullName>
            </value>
            <value>
                <fullName>&lt; 1000 Sqft</fullName>
            </value>
            <value>
                <fullName>1000 -2000 Sqft</fullName>
            </value>
            <value>
                <fullName>2000-3000 Sqft</fullName>
            </value>
            <value>
                <fullName>3000-4000 Sqft</fullName>
            </value>
            <value>
                <fullName>4000-5000 Sqft</fullName>
            </value>
            <value>
                <fullName>5000-6000 Sqft</fullName>
            </value>
            <value>
                <fullName>&gt;6000 Sqft</fullName>
            </value>
            <value>
                <fullName>Floor Plate</fullName>
            </value>
            <value>
                <fullName>FUTURE</fullName>
            </value>
            <value>
                <fullName>Joshi Villa</fullName>
            </value>
            <value>
                <fullName>Simplex</fullName>
            </value>
            <value>
                <fullName>TYPE A</fullName>
            </value>
            <value>
                <fullName>TYPE B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>