force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_UniqueKeyCIF__c.field-meta.xml
<CustomField>
    <fullName>EYI_UniqueKeyCIF__c</fullName>
    <formula>EYI_Mobile_number__c &amp; EYI_Project_Enquired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UniqueKeyCIF</label>
    <type>Text</type>
</CustomField>