force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Unregistered_Channel_Partner_RERA_ID__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unregistered_Channel_Partner_RERA_ID__c</fullName>
    <label>Unregistered Channel Partner RERA ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>