force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Unregistered_CP_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unregistered_CP_Mobile_Number__c</fullName>
    <label>REC Mobile No. (Non - Registered)</label>
    <type>Phone</type>
</CustomField>