force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Visit_Date__c</fullName>
    <formula>IF( NOT(ISNULL( Visit_Date_Data_Migration__c )) ,  Visit_Date_Data_Migration__c , IF(  ISNULL( CreatedById )  ,  TODAY(),   DATEVALUE( CreatedDate )  ))</formula>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>