force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Visited_With__c.field-meta.xml
<CustomField>
    <fullName>EYI_Visited_With__c</fullName>
    <label>Visited With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>With Family</fullName>
            </value>
            <value>
                <fullName>With Friends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>