force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Visiting_With__c.field-meta.xml
<CustomField>
    <fullName>EYI_Visiting_With__c</fullName>
    <label>Visiting With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Spouse and children</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Friends</fullName>
            </value>
            <value>
                <fullName>Relatives</fullName>
            </value>
            <value>
                <fullName>Siblings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>