force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Walk_in_Source__c.field-meta.xml
<CustomField>
    <fullName>EYI_Walk_in_Source__c</fullName>
    <label>Walk-in Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct Client</fullName>
            </value>
            <value>
                <fullName>PREC</fullName>
            </value>
            <value>
                <fullName>Presales</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>IVR</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Privilege</fullName>
            </value>
            <value>
                <fullName>REC Lead</fullName>
            </value>
            <value>
                <fullName>SM Self Sourcing</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CTI</fullName>
            </value>
            <value>
                <fullName>Archive Leads</fullName>
                <isActive>false</isActive>
                <label>Archive Leads</label>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
                <isActive>false</isActive>
                <label>Channel Partner</label>
            </value>
            <value>
                <fullName>Cold Calling</fullName>
                <isActive>false</isActive>
                <label>Cold Calling</label>
            </value>
            <value>
                <fullName>Core Leads</fullName>
                <isActive>false</isActive>
                <label>Core Leads</label>
            </value>
            <value>
                <fullName>Databases</fullName>
                <isActive>false</isActive>
                <label>Databases</label>
            </value>
            <value>
                <fullName>Digital Media</fullName>
                <isActive>false</isActive>
                <label>Digital Media</label>
            </value>
            <value>
                <fullName>Direct</fullName>
                <isActive>false</isActive>
                <label>Direct</label>
            </value>
            <value>
                <fullName>EYI Contact Center</fullName>
                <isActive>false</isActive>
                <label>EYI Contact Center</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Employee Referral Scheme</fullName>
                <isActive>false</isActive>
                <label>Employee Referral Scheme</label>
            </value>
            <value>
                <fullName>Exhibition</fullName>
                <isActive>false</isActive>
                <label>Exhibition</label>
            </value>
            <value>
                <fullName>Facebook</fullName>
                <isActive>false</isActive>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>Google</fullName>
                <isActive>false</isActive>
                <label>Google</label>
            </value>
            <value>
                <fullName>Lead Reference</fullName>
                <isActive>false</isActive>
                <label>Lead Reference</label>
            </value>
            <value>
                <fullName>Lost Leads</fullName>
                <isActive>false</isActive>
                <label>Lost Leads</label>
            </value>
            <value>
                <fullName>Loyalty</fullName>
                <isActive>false</isActive>
                <label>Loyalty</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>