force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Walk_in_Sub_source__c.field-meta.xml
<CustomField>
    <fullName>EYI_Walk_in_Sub_source__c</fullName>
    <label>Walk-in Sub-source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Walk_in_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Hoarding</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>LinkedIN</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Taboola</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>99Acres</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Bulk Whatsapp_Lost</fullName>
            </value>
            <value>
                <fullName>Centralized IVR</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>D&amp;B Database</fullName>
            </value>
            <value>
                <fullName>Direct Walk-in at WTC Office</fullName>
            </value>
            <value>
                <fullName>Direct Walk-in at YOO Pune Office</fullName>
            </value>
            <value>
                <fullName>Direct Walk-in at site</fullName>
            </value>
            <value>
                <fullName>Emailer</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>HR_Data</fullName>
            </value>
            <value>
                <fullName>IMA_Doctor</fullName>
            </value>
            <value>
                <fullName>IVR</fullName>
            </value>
            <value>
                <fullName>LOCA</fullName>
            </value>
            <value>
                <fullName>Mailers</fullName>
            </value>
            <value>
                <fullName>Moneycontrol</fullName>
            </value>
            <value>
                <fullName>Native</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>Organic</fullName>
            </value>
            <value>
                <fullName>Outbrain</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>