force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Where_Do_You_Stay_Society_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Where_Do_You_Stay_Society_Name__c</fullName>
    <label>Where Do You Stay / Society Name?</label>
    <length>80</length>
    <type>Text</type>
</CustomField>