force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/EYI_Who_Is_The_Key_Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>EYI_Who_Is_The_Key_Decision_Maker__c</fullName>
    <label>Who Is The Key Decision Maker Or Influen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>