force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/Residential_address__c.field-meta.xml
<CustomField>
    <fullName>Residential_address__c</fullName>
    <label>Residential address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>