force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/Type_of_Area__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Area__c</fullName>
    <label>Type of Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carpet Area</fullName>
            </value>
            <value>
                <fullName>Saleable Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>