force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/Visit_Date_Data_Migration__c.field-meta.xml
<CustomField>
    <fullName>Visit_Date_Data_Migration__c</fullName>
    <label>Visit Date Data Migration</label>
    <type>Date</type>
</CustomField>