force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/Visiting_on_behalf_of__c.field-meta.xml
<CustomField>
    <fullName>Visiting_on_behalf_of__c</fullName>
    <label>Visiting on behalf of</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relative</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>