force-app/main/default/objects/EYI_Customer_Information_Form__c/fields/Walk_in_Source_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Walk_in_Source_if_Other__c</fullName>
    <label>Walk-in Source (if Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>