force-app/main/default/objects/EYI_Customer_Information_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_First_Name__c</columns>
    <columns>EYI_Last_Name__c</columns>
    <columns>EYI_CIF_Type__c</columns>
    <columns>EYI_Project_Enquired__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>EYI_Region__c</columns>
    <columns>EYI_City__c</columns>
    <columns>EYI_Free_Text_City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>