force-app/main/default/objects/EYI_Customer_Information_Form__c/listViews/newGroup_EYI_Customer_Information_Form.listView-meta.xml
<ListView>
    <fullName>newGroup_EYI_Customer_Information_Form</fullName>
    <filterScope>Queue</filterScope>
    <label>newGroup</label>
    <queue>newGroup</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>